--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ authors = ["Ivan <delgado.ivan@protonmail.com>"]
 name = "agp_bin"
 path = "src/main.rs"
 
+[[bin]]
+name = "seq_test"
+path = "src/seq_test.rs"
+
 [lib]
 name = "agp_lib"
 
@@ -18,6 +22,7 @@ name = "benchmark"
 harness = false
 
 [dependencies]
+jack = { git = "https://github.com/RustAudio/rust-jack.git" }
 pest = "2.1.0"
 pest_derive = "2.1.0"
 rand = "*"
